--- a/specification/appconfiguration/AppConfiguration.Management/tspconfig.yaml
+++ b/specification/appconfiguration/AppConfiguration.Management/tspconfig.yaml
@@ -45,6 +45,8 @@ options:
     package-dir: "armappconfiguration"
     module-version: "0.0.1"
     generate-fakes: true
+    generate-samples: true
+    head-as-boolean: true
     inject-spans: true
     single-client: true
     slice-elements-byval: true
