--- a/specification/appconfiguration/AppConfiguration.Management/tspconfig.yaml
+++ b/specification/appconfiguration/AppConfiguration.Management/tspconfig.yaml
@@ -35,13 +35,14 @@ options:
     package-details:
       name: "@azure/arm-appconfiguration"
     flavor: azure
+    experimental-extensible-enums: true
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-appconfiguration"
     namespace: com.azure.resourcemanager.appconfiguration
     flavor: azure
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
-    service-dir: "sdk/appconfiguration"
+    service-dir: "sdk/resourcemanager/appconfiguration"
     package-dir: "armappconfiguration"
     module-version: "0.0.1"
     generate-fakes: true
