--- a/specification/netapp/NetApp.Management/tspconfig.yaml
+++ b/specification/netapp/NetApp.Management/tspconfig.yaml
@@ -1,14 +1,54 @@
+parameters:
+  "service-dir":
+    default: "sdk/netapp"
+
 emit:
   - "@azure-tools/typespec-autorest"
+
 options:
   "@azure-tools/typespec-autorest":
     omit-unreachable-types: true
+    use-read-only-status-schema: true
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/netapp.json"
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+  "@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.NetApp"
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "{package-dir}"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-netapp"
+    namespace: "azure.mgmt.netapp"
+    generate-test: true
+    generate-sample: true
+    flavor: "azure"
+  "@azure-tools/typespec-java":
+    package-dir: "azure-resourcemanager-netapp"
+    namespace: "com.azure.resourcemanager.netapp"
+    service-name: "NetAppFiles"
+    flavor: azure
+  "@azure-tools/typespec-ts":
+    package-dir: "arm-netapp"
+    flavor: azure
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-netapp"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/netapp"
+    package-dir: "armnetapp"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    flavor: "azure"
+    generate-samples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
+
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
