--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -9569,7 +9569,8 @@
             "value": "Updating"
           }
         ]
-      }
+      },
+      "readOnly": true
     },
     "NicInfo": {
       "type": "object",
@@ -9887,7 +9888,8 @@
       "x-ms-enum": {
         "name": "ProvisioningState",
         "modelAsString": false
-      }
+      },
+      "readOnly": true
     },
     "QosType": {
       "type": "string",
