add Accounts_ListBySubscription example

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -519,8 +519,8 @@
           }
         },
         "x-ms-examples": {
-          "Accounts_List": {
-            "$ref": "./examples/Accounts_List.json"
+          "Accounts_ListBySubscription": {
+            "$ref": "./examples/Accounts_ListBySubscription.json"
           }
         },
         "x-ms-pageable": {
@@ -716,6 +716,11 @@
             "schema": {
               "$ref": "../../../../../common-types/resource-management/v6/types.json#/definitions/ErrorResponse"
             }
+          }
+        },
+        "x-ms-examples": {
+          "Accounts_List": {
+            "$ref": "./examples/Accounts_List.json"
           }
         },
         "x-ms-pageable": {
