Updated SdkRepoCommit to SdkBranchName

--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -3,7 +3,7 @@ parameters:
     type: string
   - name: SdkRepoUrl
     type: string
-  - name: SdkRepoCommit
+  - name: SdkRepoBranch
     type: string
     default: 'main'
   - name: ConfigType
@@ -110,66 +110,68 @@ stages:
             Exit 1
           }
 
-          $checkoutCommitish = '${{ parameters.SdkRepoCommit }}'
+          $checkoutCommitish = '${{ parameters.SdkRepoBranch }}'
           Write-Host "##vso[task.setvariable variable=CheckoutCommitish]$checkoutCommitish"
           Write-Host "Will use commitish for SDK repo checkout: '$checkoutCommitish'"
         displayName: "Create Run Time Variables"
 
       - ${{ if and(eq(variables['System.TeamProject'], 'internal'), eq(parameters.CreatePullRequest, true), ne(variables['Build.Reason'], 'PullRequest')) }}:
         - pwsh: |
-            $sdkRepoCommitish = '${{ parameters.SdkRepoCommit }}'
+            $sdkRepoBranch = '${{ parameters.SdkRepoBranch }}'
             $sdkRepoUrl = '${{ parameters.SdkRepoUrl }}'
-            Write-Host "Validating SDK repo commitish: '$sdkRepoCommitish'"
-            # Check if it's a commit SHA
-            $commitShaPattern = '^[a-fA-F0-9]{7,40}$'
+            Write-Host "Validating SDK repo branch: '$SdkRepoBranch'"
 
-            if ($sdkRepoCommitish.contains(":")) {
-              Write-Host "##vso[task.logissue type=error]'SDK repository commit' must be a commit SHA or branch name without ':'"
+            if ($sdkRepoBranch.contains(":")) {
+              Write-Host "##vso[task.logissue type=error]'SDK repository branch' must be a commit SHA or branch name without ':'"
               Exit 1
             }
 
-            if (($sdkRepoCommitish -ne 'main') -and ($sdkRepoCommitish -notmatch $commitShaPattern)) {
-                # set repo owner to 'azure-sdk' when customized branch is provided
-                $sdkRepoOwner = 'azure-sdk'
-                Write-Host "##vso[task.setvariable variable=SdkRepoOwner]$sdkRepoOwner"
-                Write-Host "SdkRepoOwner variable set to: $sdkRepoOwner"
-                $sdkRepoUrl = "https://github.com/azure-sdk/$(SdkRepoName)"
-                # Check if branch exists remotely
-                Write-Host "Checking if branch '$sdkRepoCommitish' exists in remote repository '$sdkRepoUrl'..."
+            if (($sdkRepoBranch -ne 'main') -and (-not [string]::IsNullOrWhiteSpace($sdkRepoBranch))) {
 
-                $branchExists = git ls-remote --heads $sdkRepoUrl "refs/heads/$sdkRepoCommitish"
-                $gitExitCode = $LASTEXITCODE
+              # GitHub's limit is around 250 characters
+              if ($sdkRepoBranch.Length -gt 250) {
+                Write-Host "##vso[task.logissue type=error]The provided SDK branch name exceeds 250 characters."
+                Exit 1
+              }
 
-                if ($gitExitCode -ne 0) {
-                    Write-Host "##vso[task.logissue type=error]Failed to validate branch remotely (git exit code: $gitExitCode)"
-                    Exit $gitExitCode
-                }
+              # Validate branch name
+              if ($sdkRepoBranch -match '^/|/$|//|\.\.|^@$|\.$/|[\x00-\x1F\x7F~^:?*@\[\]\\s]') {
+                  Write-Host "##vso[task.logissue type=error]The provided SDK branch name '$sdkRepoBranch' is invalid."
+                  Exit 1
+              }
 
-                if ([string]::IsNullOrEmpty($branchExists)) {
-                    Write-Host "Branch '$sdkRepoCommitish' does not exist in remote repository"
-                    Write-Host "Will checkout 'main' and create new branch '$sdkRepoCommitish' later"
+              # Set repo owner to 'azure-sdk' when customized branch is provided
+              $sdkRepoOwner = 'azure-sdk'
+              Write-Host "##vso[task.setvariable variable=SdkRepoOwner]$sdkRepoOwner"
+              Write-Host "SdkRepoOwner variable set to: $sdkRepoOwner"
+              $sdkRepoUrl = "https://github.com/azure-sdk/$(SdkRepoName)"
 
-                    # Set flags for post-checkout processing
-                    Write-Host "##vso[task.setvariable variable=CreateNewBranch]true"
-                    Write-Host "##vso[task.setvariable variable=NewBranchName]$sdkRepoCommitish"
+              # Check if branch exists remotely
+              Write-Host "Checking if branch '$SdkRepoBranch' exists in remote repository '$sdkRepoUrl'..."
+              $branchExists = git ls-remote --heads $sdkRepoUrl "refs/heads/$SdkRepoBranch"
+              $gitExitCode = $LASTEXITCODE
 
-                    # Use 'main' for initial checkout
-                    $checkoutCommitish = 'main'
-                } else {
-                    Write-Host "Branch '$sdkRepoCommitish' exists in remote repository"
-                    Write-Host "##vso[task.setvariable variable=CreateNewBranch]false"
-                    $checkoutCommitish = $sdkRepoCommitish
-                }
+              if ($gitExitCode -ne 0) {
+                  Write-Host "##vso[task.logissue type=error]Failed to validate branch remotely (git exit code: $gitExitCode)"
+                  Exit $gitExitCode
+              }
+
+              if ([string]::IsNullOrEmpty($branchExists)) {
+                  Write-Host "Branch '$SdkRepoBranch' does not exist in remote repository"
+                  Write-Host "Will checkout 'main'"
+                  $checkoutCommitish = 'main'
+              } else {
+                  Write-Host "Branch '$SdkRepoBranch' exists in remote repository"
+                  $checkoutCommitish = $SdkRepoBranch
+              }
             } else {
-                Write-Host "Using commitish as-is: '$sdkRepoCommitish' (main branch or commit SHA)"
-                Write-Host "##vso[task.setvariable variable=CreateNewBranch]false"
-                $checkoutCommitish = $sdkRepoCommitish
+              Write-Host "Using commitish as-is: '$SdkRepoBranch' (main branch)"
+              $checkoutCommitish = $SdkRepoBranch
             }
 
             Write-Host "##vso[task.setvariable variable=CheckoutCommitish]$checkoutCommitish"
             Write-Host "Will use commitish for SDK repo checkout: '$checkoutCommitish'"
           displayName: "Validate and update SDK repository commitish"
-
 
       - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
         parameters:
@@ -190,39 +192,6 @@ stages:
           ${{ if and(eq(variables['System.TeamProject'], 'internal'), endsWith(variables['Build.Repository.Name'], '-pr')) }}:
             TokenToUseForAuth: $(azuresdk-github-pat)
             PreserveAuthToken: true
-
-      - ${{ if and(eq(variables['System.TeamProject'], 'internal'), eq(parameters.CreatePullRequest, true), ne(variables['Build.Reason'], 'PullRequest')) }}:
-        - pwsh: |
-            if ('$(CreateNewBranch)' -eq 'true') {
-                $newBranchName = '$(NewBranchName)'
-                Write-Host "Creating new branch '$newBranchName' based on current checkout (main)"
-
-                # Verify we're on main branch
-                $currentBranch = git branch --show-current
-                Write-Host "Current branch before creating new branch: $currentBranch"
-
-                # Create and switch to the new branch
-                git checkout -b $newBranchName
-
-                # Verify the branch creation
-                $newCurrentBranch = git branch --show-current
-                Write-Host "Successfully created and switched to branch: $newCurrentBranch"
-
-                if ($newCurrentBranch -eq $newBranchName) {
-                    Write-Host "##vso[task.setvariable variable=ActualSdkBranch]$newBranchName"
-                    Write-Host "Branch creation successful"
-                } else {
-                    Write-Host "##vso[task.logissue type=error]Failed to create or switch to branch '$newBranchName'. Current branch: $newCurrentBranch"
-                    exit 1
-                }
-            } else {
-                # Use the original commitish as the actual branch
-                $actualBranch = '${{ parameters.SdkRepoCommit }}'
-                Write-Host "Using existing commitish: $actualBranch"
-                Write-Host "##vso[task.setvariable variable=ActualSdkBranch]$actualBranch"
-            }
-          workingDirectory: $(SdkRepoDirectory)
-          displayName: "Create new branch for SDK repo if needed"
 
       - task: NodeTool@0
         inputs:
@@ -303,7 +272,7 @@ stages:
 
             # use the user provided branch name when SdkRepoOwner is set as 'azure-sdk'
             if ('$(SdkRepoOwner)' -eq 'azure-sdk') {
-              $sdkPrBranchName = '$(ActualSdkBranch)'
+              $sdkPrBranchName = '${{ parameters.SdkRepoBranch }}'
             }
             Write-Host "Branch name is set to: $sdkPrBranchName"
             Write-Host "##vso[task.setvariable variable=SdkPullRequestSourceBranch]$sdkPrBranchName"
