change service dir

--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -64,6 +64,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    service-dir: "sdk/ai/azdocumentintelligence"
     package-dir: "azdocumentintelligence"
     module-version: "0.0.1"
     emitter-output-dir: "{project-root}"
