--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -115,7 +115,7 @@ stages:
           Write-Host "Will use commitish for SDK repo checkout: '$checkoutCommitish'"
         displayName: "Create Run Time Variables"
 
-      - ${{ if and(eq(variables['System.TeamProject'], 'internal'), eq(parameters.CreatePullRequest, true), ne(variables['Build.Reason'], 'PullRequest')) }}:
+      - ${{ if and(eq(variables['System.TeamProject'], 'internal'), ne(variables['Build.Reason'], 'PullRequest')) }}:
         - pwsh: |
             $sdkRepoBranch = '${{ parameters.SdkRepoBranch }}'
             $sdkRepoUrl = '${{ parameters.SdkRepoUrl }}'
@@ -129,10 +129,10 @@ stages:
                 Exit 1
               }
 
-              # Validate branch name
-              if ($sdkRepoBranch -match '^/|/$|//|\.\.|^@$|\.$|[\x00-\x1F\x7F~^:?*@\[\]\\s]') {
-                  Write-Host "##vso[task.logissue type=error]The provided SDK branch name '$sdkRepoBranch' is invalid."
-                  Exit 1
+              # Validate branch name - fixed character range issue
+              if ($sdkRepoBranch -match '^/|/$|//|\.\.|^@$|\.$|[\x00-\x1F]|\x7F|[~^:?*@\[\]\\s]') {
+                Write-Host "##vso[task.logissue type=error]The provided SDK branch name '$sdkRepoBranch' is invalid."
+                Exit 1
               }
 
               # Set repo owner to 'azure-sdk' when customized branch is provided
@@ -147,17 +147,17 @@ stages:
               $gitExitCode = $LASTEXITCODE
 
               if ($gitExitCode -ne 0) {
-                  Write-Host "##vso[task.logissue type=error]Failed to validate branch remotely (git exit code: $gitExitCode)"
-                  Exit $gitExitCode
+                Write-Host "##vso[task.logissue type=error]Failed to validate branch remotely (git exit code: $gitExitCode)"
+                Exit $gitExitCode
               }
 
               if ([string]::IsNullOrEmpty($branchExists)) {
-                  Write-Host "Branch '$SdkRepoBranch' does not exist in remote repository"
-                  Write-Host "Will checkout 'main'"
-                  $checkoutCommitish = 'main'
+                Write-Host "Branch '$SdkRepoBranch' does not exist in remote repository"
+                Write-Host "Will checkout 'main'"
+                $checkoutCommitish = 'main'
               } else {
-                  Write-Host "Branch '$SdkRepoBranch' exists in remote repository"
-                  $checkoutCommitish = $SdkRepoBranch
+                Write-Host "Branch '$SdkRepoBranch' exists in remote repository"
+                $checkoutCommitish = $SdkRepoBranch
               }
             } else {
               Write-Host "Using commitish as-is: '$SdkRepoBranch' (main branch)"
