fix TypeSpec Validation

--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -32,7 +32,7 @@ options:
     model-namespace: false
     emitter-output-dir: "{csharp-sdk-folder}/sdk/{service-directory-name}/{namespace}/src"
     namespace: Azure.Communication.Messages
-    package-dir: "Azure.Communication.Messages"
+    package-dir: Azure.Communication.Messages
     save-inputs: true
     flavor: azure
   "@azure-typespec/http-client-csharp":
