add certificate options

--- a/specification/confidentialledger/data-plane/ConfidentialLedgerIdentity/tspconfig.yaml
+++ b/specification/confidentialledger/data-plane/ConfidentialLedgerIdentity/tspconfig.yaml
@@ -12,3 +12,12 @@ options:
     emitter-output-dir: "{project-root}"
     examples-dir: "{project-root}/examples"
     output-file: "{version-status}/{version}/identityservice.json"
+  "@azure-tools/typespec-python":
+    "package-version": "1.0.0b1"
+    "package-name": "azure-confidentialledger-certificate"
+    "package-dir": "azure-confidentialledger-certificate"
+    "namespace": "azure.confidentialledger.certificate"
+    "flavor": "azure"
+    "generate-test": false
+    "generate-sample": false
+    "package-pprint-name": "Confidential Ledger Certificate"
