--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -28,13 +28,12 @@ options:
     emitter-output-dir: "{project-root}/.."
     omit-unreachable-types: true
   "@azure-tools/typespec-csharp":
+    package-dir: "Azure.Communication.Messages"
     clear-output-folder: true
     model-namespace: false
-    emitter-output-dir: "{csharp-sdk-folder}/sdk/{service-directory-name}/{namespace}/src"
-    namespace: Azure.Communication.Messages
-    package-dir: "Azure.Communication.Messages"
-    save-inputs: true
+    namespace: "{package-dir}"
     flavor: azure
+    emitter-output-dir: "{csharp-sdk-folder}/sdk/{service-directory-name}/{namespace}/src"
   "@azure-typespec/http-client-csharp":
     namespace: Azure.Communication.Messages
     model-namespace: false
