[package.json] add git

--- a/.github/shared/package.json
+++ b/.github/shared/package.json
@@ -8,6 +8,7 @@
     "./changed-files": "./src/changed-files.js",
     "./error-reporting": "./src/error-reporting.js",
     "./exec": "./src/exec.js",
+    "./git": "./src/git.js",
     "./github": "./src/github.js",
     "./logger": "./src/logger.js",
     "./math": "./src/math.js",
