--- a/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
+++ b/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
@@ -2,7 +2,7 @@ parameters:
   "service-dir":
     default: "sdk/informaticadatamanagement"
   "csharp-service-dir":
-    default: "sdk/informaticadatamanagement"
+    default: "{output-dir}/sdk/informaticadatamanagement"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
