--- a/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
+++ b/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
@@ -8,13 +8,14 @@ options:
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/resourcenotifications.json"
+    examples-dir: "{project-root}/examples"
     use-read-only-status-schema: true
   "@azure-tools/typespec-csharp":
     flavor: azure
     package-dir: "Azure.ResourceManager.ResourceNotifications"
     clear-output-folder: true
-    model-namespace: true
-    namespace: "{package-dir}"
+    model-namespace: false
+    namespace: "Azure.ResourceManager.ResourceNotifications"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-resourcenotifications"
     namespace: "azure.mgmt.resourcenotifications"
