try removing src from emitter-output-dir

--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
   "@azure-tools/typespec-csharp":
     clear-output-folder: true
     model-namespace: false
-    emitter-output-dir: "{csharp-sdk-folder}/sdk/{service-directory-name}/{namespace}/src"
+    emitter-output-dir: "{csharp-sdk-folder}/sdk/{service-directory-name}/{namespace}"
     namespace: Azure.Communication.Messages
     package-dir: "Azure.Communication.Messages"
     save-inputs: true
