Fix Typespec Validation Ci error

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -1045,7 +1045,7 @@
     - options.@azure-tools/typespec-go.flavor
     - options.@azure-tools/typespec-go.generate-samples
   paths:
-    - servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+    - servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
