--- a/specification/agricultureplatform/resource-manager/Microsoft.AgriculturePlatform/AgriculturePlatform/tspconfig.yaml
+++ b/specification/agricultureplatform/resource-manager/Microsoft.AgriculturePlatform/AgriculturePlatform/tspconfig.yaml
@@ -9,9 +9,10 @@ linter:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
 options:
   "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{output-dir}"
-    azure-resource-provider-folder: ./resource-manager
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/openapi.json"
+    azure-resource-provider-folder: "resource-manager"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     examples-dir: "{project-root}/examples"
     new-line: lf
     use-read-only-status-schema: true
