Add Go SDK configuration to fix TypeSpec validation

--- a/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
+++ b/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
@@ -34,6 +34,14 @@ options:
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-resourcenotifications"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/resourcenotifications"
+    package-dir: "armresourcenotifications"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    generate-samples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
 
 linter:
   extends:
