Generate portalservices .NET SDK  using new generator (#36901)

--- a/specification/portalservices/CopilotSettings.Management/tspconfig.yaml
+++ b/specification/portalservices/CopilotSettings.Management/tspconfig.yaml
@@ -46,6 +46,9 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-typespec/http-client-csharp-mgmt":
+    package-name: "Azure.ResourceManager.PortalServicesCopilot"
+    namespace: "{package-name}"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
