--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -30,6 +30,8 @@ options:
     premium: true
     service-dir: "sdk/resourcemanager"
     enable-sync-stack: false
+    remove-inner: OperationStatusResult
+    use-object-for-unknown: true
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-rediscache"
