--- a/specification/newrelic/NewRelicObservability.Management/tspconfig.yaml
+++ b/specification/newrelic/NewRelicObservability.Management/tspconfig.yaml
@@ -13,7 +13,7 @@ options:
     emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     flavor: azure
-    package-dir: "Azure.ResourceManager.NewRelic"
+    package-dir: "Azure.ResourceManager.NewRelicObservability"
     clear-output-folder: true
     model-namespace: true
     namespace: "{package-dir}"
