Fix swagger SemanticValidation ci error

--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-01-01-preview/managedapplication.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-01-01-preview/managedapplication.json
@@ -1415,7 +1415,7 @@
           "description": "AveragePartitionLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AveragePartitionLoadTrigger",
+      "x-ms-discriminator-value": "AveragePartitionLoad",
       "required": [
         "metricName",
         "lowerLoadThreshold",
@@ -1454,7 +1454,7 @@
           "description": "AverageServiceLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AverageServiceLoadTrigger",
+      "x-ms-discriminator-value": "AverageServiceLoad",
       "required": [
         "metricName",
         "lowerLoadThreshold",
