--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-07-01-preview/managedapplication.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-07-01-preview/managedapplication.json
@@ -1431,7 +1431,7 @@
           "description": "AveragePartitionLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AveragePartitionLoadTrigger",
+      "x-ms-discriminator-value": "AveragePartitionLoad",
       "required": [
         "metricName",
         "lowerLoadThreshold",
@@ -1471,7 +1471,7 @@
           "description": "AverageServiceLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AverageServiceLoadTrigger",
+      "x-ms-discriminator-value": "AverageServiceLoad",
       "required": [
         "metricName",
         "lowerLoadThreshold",
