--- a/eng/tools/summarize-impact/test/fixtures/default/after/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/eng/tools/summarize-impact/test/fixtures/default/after/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -27,7 +27,7 @@ options:
     namespace: "Azure.Template.Contoso"
     flavor: azure
   "@azure-typespec/http-client-csharp":
-    emitter-output-dir: "{output-dir}/{service-dir}/Azure.Template.Contoso"
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     namespace: Azure.Template.Contoso
     model-namespace: false
   "@azure-tools/typespec-ts":
