--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
@@ -27198,7 +27198,7 @@
                 },
                 "accessRulesVersion": {
                   "description": "Access Rules Version of Network Security Perimeter Profile",
-                  "string": "string"
+                  "type": "string"
                 },
                 "accessRules": {
                   "description": "Access Rules of Network Security Perimeter Profile",
@@ -27266,7 +27266,7 @@
                               "type": "string"
                             }
                           },
-                          "fullQualifiedDomainNames": {
+                          "fullyQualifiedDomainNames": {
                             "description": "Full Qualified Domain Names of Access Rule. Not supported by App Service.",
                             "type": "array",
                             "items": {
