--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/GetSiteNetworkSecurityPerimeterConfiguration.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/GetSiteNetworkSecurityPerimeterConfiguration.json
@@ -19,9 +19,7 @@
           "networkSecurityPerimeter": {
             "id": "/subscriptions/079ae74b-9689-40ac-8ec1-64ec0ef64562/resourceGroups/stf-centraluseuap/providers/Microsoft.Network/networkSecurityPerimeters/stf-centraluseuap-perimeter",
             "perimeterGuid": "6700F3F3-C5F0-464C-B432-39694F55A180",
-            "location": "centraluseuap",
-            "profiles": null,
-            "provisioningState": null
+            "location": "centraluseuap"
           },
           "resourceAssociation": {
             "name": "myAssociation",
@@ -30,7 +28,6 @@
           "profile": {
             "accessRulesVersion": "2",
             "diagnosticSettingsVersion": "2",
-            "id": null,
             "name": "stf-centraluseuap-profile",
             "accessRules": [
               {
@@ -68,6 +65,7 @@
           }
         }
       }
-    }
+    },
+    "404": {}
   }
 }
