--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
@@ -27183,7 +27183,7 @@
                   "type": "string"
                 },
                 "accessMode": {
-                  "description": "Access Mode of Network Security Perimeter Assocation",
+                  "description": "Access Mode of Network Security Perimeter Association",
                   "type": "string"
                 }
               }
@@ -27294,7 +27294,7 @@
                 },
                 "diagnosticSettingsVersion": {
                   "description": "Diagnostic Rules Version of Network Security Perimeter Profile",
-                  "string": "string"
+                  "type": "string"
                 },
                 "enabledLogCategories": {
                   "description": "Enabled Log Categories of Network Security Perimeter Profile",
