--- a/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
+++ b/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
@@ -20,6 +20,7 @@ options:
     namespace: "Azure.AI.Language.Text"
     flavor: azure
   "@azure-tools/typespec-python":
+    package-name: "azure-ai-textanalytics"
     package-dir: "azure-ai-textanalytics"
     namespace: "azure.ai.language.text"
     generate-test: true
