try adding /src back

--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -31,7 +31,7 @@ options:
     package-dir: "Azure.Communication.Messages"
     clear-output-folder: true
     model-namespace: false
-    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}/src"
     save-inputs: true
     namespace: "{package-dir}"
     flavor: azure
