--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -55,10 +55,8 @@ options:
   "@azure-tools/typespec-ts":
     title: DocumentIntelligence
     package-dir: "ai-document-intelligence-rest"
-    is-modular-library: true
+    is-modular-library: false
     generate-metadata: true
-    examples-dir: "./examples"
-    generate-sample: true
     package-details:
       name: "@azure-rest/ai-document-intelligence"
       description: "Document Intelligence Rest Client"
