--- a/specification/ai/HealthInsights/HealthInsights.RadiologyInsights/tspconfig.yaml
+++ b/specification/ai/HealthInsights/HealthInsights.RadiologyInsights/tspconfig.yaml
@@ -58,7 +58,8 @@ options:
     package-dir: "health-insights-radiologyinsights-rest"
     emitter-output-dir: "{js-sdk-folder}/sdk/{service-directory-name}/health-insights-cancerprofiling-rest"
     generate-metadata: true
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/health-insights-radiologyinsights"
     flavor: azure
