--- a/specification/msi/ManagedIdentity.Management/tspconfig.yaml
+++ b/specification/msi/ManagedIdentity.Management/tspconfig.yaml
@@ -19,10 +19,13 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-managedserviceidentity"
-    namespace: "com.azure.resourcemanager.managedserviceidentity"
+    package-dir: "azure-resourcemanager-msi"
+    namespace: "com.azure.resourcemanager.msi"
     service-name: "Msi"
     flavor: azure
+    premium: true
+    enable-sync-stack: false
+    service-dir: "sdk/resourcemanager"
   "@azure-tools/typespec-ts":
     package-dir: "arm-msi"
     flavor: azure
