--- a/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/tspconfig.yaml
+++ b/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/tspconfig.yaml
@@ -6,11 +6,12 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     omit-unreachable-types: true
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/FlexibleServers/{version-status}/{version}/FlexibleServers.json"
+    output-file: "{version-status}/{version}/openapi.json"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     flavor: azure
