--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -942,7 +942,7 @@
     - options.@azure-tools/typespec-ts.*
     - parameters.service-dir.default
   paths:
-    - purviewpolicy/PurviewPolicy.Management/tspconfig.yaml
+    - purviewpolicy/resource-manager/Microsoft.Purview/PurviewPolicy/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
