--- a/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
+++ b/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
@@ -29,7 +29,8 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     generate-metadata: true
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-dir: "programmableconnectivity-rest"
     package-details:
       name: "@azure-rest/programmableconnectivity"
