--- a/specification/datadog/Datadog.Management/tspconfig.yaml
+++ b/specification/datadog/Datadog.Management/tspconfig.yaml
@@ -26,7 +26,7 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-datadog"
     namespace: "com.azure.resourcemanager.datadog"
-    service-name: "Datadog" # human-readable service name, whitespace allowed
+    service-name: "Microsoft Datadog"
     flavor: azure
   "@azure-tools/typespec-ts":
     service-dir: sdk/datadog
