--- a/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
+++ b/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
@@ -7695,7 +7695,7 @@
         "jobId": {
           "type": "string",
           "format": "arm-id",
-          "description": "ARM Id of Job of bulk publish or deploy",
+          "description": "ARM Id of Job of bulk publish or previously executed bulk deploy",
           "x-ms-arm-id-details": {
             "allowedResources": [
               {
@@ -7762,7 +7762,7 @@
         "jobId": {
           "type": "string",
           "format": "arm-id",
-          "description": "ARM Id of Job of bulk review or publish",
+          "description": "ARM Id of Job of bulk review or previously executed bulk publish",
           "x-ms-arm-id-details": {
             "allowedResources": [
               {
@@ -7850,7 +7850,7 @@
         "jobId": {
           "type": "string",
           "format": "arm-id",
-          "description": "ARM Id of Job of bulk review",
+          "description": "ARM Id of Job of previously executed bulk review",
           "x-ms-arm-id-details": {
             "allowedResources": [
               {
