fix issues introduced by previous api-version bump

--- a/specification/storagemover/StorageMover.Management/tspconfig.yaml
+++ b/specification/storagemover/StorageMover.Management/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     flavor: azure
     package-dir: "Azure.ResourceManager.StorageMover"
     clear-output-folder: true
-    model-namespace: false
+    model-namespace: true
     namespace: "{package-dir}"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-storagemover"
