--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -492,7 +492,7 @@
     - options.@azure-tools/typespec-ts.*
     - parameters.service-dir.default
   paths:
-    - desktopvirtualization/DesktopVirtualization.Management/tspconfig.yaml
+    - desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/DesktopVirtualization/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
