--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/deploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/deploymentSettings.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Deployment Settings",
-    "version": "2025-02-01-preview",
+    "version": "2025-10-01",
     "description": "Azure Stack HCI Deployment Settings."
   },
   "schemes": [
