Updated per feedback

--- a/specification/ai/Azure.AI.Projects/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Projects/tspconfig.yaml
@@ -34,9 +34,11 @@ options:
     namespace: Azure.AI.Projects
     model-namespace: false
     api-version: "v1"
+    flavor: azure
   "@typespec/http-client-csharp":
     package-name: Azure.AI.Projects
     api-version: "v1"
+    flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-projects"
     api-version: "v1"
